force-app/main/default/objects/TruSculpt_S__c/TruSculpt_S__c.object-meta.xml
<CustomObject>
    <label>TruSculpt(S)</label>
    <nameField>
        <label>TruSculpt(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TruSculpt(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>