force-app/main/default/objects/TruSculpt_S__c/fields/Average_Tuning__c.field-meta.xml
<CustomField>
    <fullName>Average_Tuning__c</fullName>
    <label>Average Tuning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>