force-app/main/default/objects/TruSculpt_S__c/fields/Employee_Hook_Up_Initials__c.field-meta.xml
<CustomField>
    <fullName>Employee_Hook_Up_Initials__c</fullName>
    <label>Employee Hook-Up Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>