force-app/main/default/objects/TruSculpt_S__c/fields/Employee_Mid_Point_Initials__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mid_Point_Initials__c</fullName>
    <label>Employee Mid Point Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>