force-app/main/default/objects/TruSculpt_S__c/fields/TruSculpt__c.field-meta.xml
<CustomField>
    <fullName>TruSculpt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TruSculpt</label>
    <referenceTo>TruSculpt__c</referenceTo>
    <relationshipLabel>TruSculpt(S)</relationshipLabel>
    <relationshipName>TruSculpt_S</relationshipName>
    <type>Lookup</type>
</CustomField>